add free and hori vert

--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.21.3)
 project(CRat)
 
 set(CRat_src main.cpp Autotest.cpp CRat.cpp CRat0.cpp CRat1.cpp)
-set(CRat_hdr main.h Autotest.h CRat.h CRat0.h CRat1.h Factory.h)
+set(CRat_hdr main.h Autotest.h CRat.h CRat0.h CRat1.h)
 
 add_executable(${PROJECT_NAME} ${CRat_src} ${CRat_hdr})
